support tiantian connection

--- a/projects/cli/cutechess-cli.vcxproj
+++ b/projects/cli/cutechess-cli.vcxproj
@@ -185,6 +185,9 @@
       <Compression>default</Compression>
       <ExecutionDescription>Rcc'ing %(Identity)...</ExecutionDescription>
     </QtRcc>
+    <ProjectReference>
+      <UseLibraryDependencyInputs>false</UseLibraryDependencyInputs>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\cutechesscoreapp.cpp" />
